RESOLVED FIXED 258577
Fault logs should not be skipped
https://bugs.webkit.org/show_bug.cgi?id=258577
Summary Fault logs should not be skipped
Per Arne Vollan
Reported 2023-06-27 08:47:35 PDT
Fault logs should not be skipped in the WebContent process, but sent asap to the Networking process.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-27 08:47:47 PDT
Per Arne Vollan
Comment 2 2023-06-27 08:49:46 PDT
EWS
Comment 3 2023-06-27 11:56:19 PDT
Committed 265558@main (4e7db72c941c): <https://commits.webkit.org/265558@main> Reviewed commits have been landed. Closing PR #15337 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.