Fault logs should not be skipped https://bugs.webkit.org/show_bug.cgi?id=258577 rdar://111393438

Reviewed by Chris Dumez.

Fault logs should not be skipped in the WebContent process, but sent asap to the Networking process.

* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::registerLogHook):

Canonical link: https://commits.webkit.org/265558@main